# hi-low

./: README.md  pyproject.toml
.claude/: ISSUE_IMPLEMENTATION.md
.github/scripts/: find-unblocked-issues.sh  trigger-claude.sh  visualize-dependencies.sh
.github/workflows/: trigger-next-issues.yml
src/hi_low/: __init__.py  cli.py  evaluation.py  game_loop.py
tests/: __init__.py  test_evaluation.py  test_game_loop.py
