[project]
name = "hi-low"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
hi-low = "hi_low.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/hi_low --cov-report=term-missing --cov-report=html"
